[package]
name = "D"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1.4", features = ["v4"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }


