[package]
name = "D"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "2.8.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1.4", features = ["v4"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.28", features = ["tokio-comp"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
chrono = "0.4.41"


